--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "cookies-next": "^4.1.1",
+    "jose": "^5.2.2",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.61",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.1",
