--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/postgres": "^0.7.2",
     "bootstrap": "^5.3.3",
     "cookies-next": "^4.1.1",
     "jose": "^5.2.2",
